--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,8 @@ body {
   font-family: "Quicksand", sans-serif !important;
 }
 *{
+  padding: 0;
+  margin: 0;
   scroll-behavior: smooth !important;
   font-family: "Quicksand", sans-serif !important;
   /* transition-duration: 5s; */
@@ -159,22 +161,79 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
-.bg-opacity {
-  background-color: #ff4b0d;
-  opacity: 0.1;
+@keyframes gradientShift {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 100% 0%;
+  }
+  /* 0% {
+    background: linear-gradient(90deg, #5345E6, #8F34E9);
+  }
+  50% {
+    background: linear-gradient(90deg, #8F34E9, #B253E9);
+  }
+  100% {
+    background: linear-gradient(90deg, #5345E6, #8F34E9);
+  } */
 }
 
-.bg-orange-custom {
-  background-color: #ff4b0d;
+.animated-gradient {
+   border-color: linear-gradient(90deg, 
+        #ff0000, #ff7f00, #ffff00, #00ff00, 
+        #0000ff, #4b0082, #9400d3, #ff0000);
+  background-size: 200% 200%;
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  inset: -2px;
+  right: -2px;
+  bottom: -2px;
+  /* animation: moveGradient 5s linear infinite; */
+  animation: gradientShift 2s linear infinite;
 }
-.bd-orange-custom {
-  border-color: #ff4b0d;
-  border-width: 1px;
+.buttonreal{
+  background: #5345E6;
 }
-.text-orange-custom {
-  color: #ff4b0d;
+.buttonreal::before{
+    content: '';
+    position: absolute;
+    /* z-index: -4; */
+    top: -2px;
+    /* left: -3px; */
+    /* right: 3px; */
+    bottom: -2px;
+    width: 102%;
+    border-radius: 30px;
+    background: linear-gradient(90deg, 
+        #ff0000, #ff7f00, #ffff00, #00ff00, 
+        #0000ff, #4b0082, #9400d3, #ff0000);
+    background-size: 200% 200%;
+    z-index: -1;
+    animation: rainbow-border2 2s linear infinite;
 }
+@keyframes rainbow-border2 {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
+}
+/* .buttonreal::after {
+    content: '';
+    position: absolute;
+    top: -1px;
+    left: 2px;
+    right: -10px;
+    width: 100%;
+    bottom: -1px;
+    border-radius: 30px;
+    background: #131417;
+    z-index: -1;
+    filter: blur(1px);
+} */
 .bg-purple-custom {
   background-color: #4a3353;
 }
@@ -289,6 +348,50 @@ tr:not(:has(th)):hover {
   animation: dropNav 0.5s ease-in
 }
 
+.button1::before{
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: -3px;
+    bottom: 0px;
+    border-radius: 150px;
+    background: linear-gradient(90deg, 
+        #ff0000, #ff7f00, #ffff00, #00ff00, 
+        #0000ff, #4b0082, #9400d3, #ff0000);
+    background-size: 200% 200%;
+    z-index: -1;
+    animation: rainbow-border 2s linear infinite;
+}
+.button12::before{
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: -3px;
+    bottom: 0px;
+    border-radius: 150px;
+    opacity: 0.2;
+    background: linear-gradient(90deg, 
+        #ff0000, #ff7f00, #ffff00, #00ff00, 
+        #0000ff, #4b0082, #9400d3, #ff0000);
+    background-size: 200% 200%;
+    z-index: -1;
+    animation: rainbow-border 2s linear infinite;
+}
+@keyframes rainbow-border {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
+}
+.herobtn{
+    background: linear-gradient(90deg, #5345E6 0%, #8F34E9 100%);
+
+}
+
 /* @keyframes popup {
   0% {
     transform: scale(0.8);
@@ -303,6 +406,36 @@ tr:not(:has(th)):hover {
   }
   100% {
     opacity: 1;
+  }
+}
+.gradient-text {
+  /* background: linear-gradient(90deg, #5345E6, #8F34E9); */
+  background: linear-gradient(90deg, 
+        #ff0000, #ff7f00, #ffff00, #00ff00, 
+        #0000ff, #4b0082, #9400d3, #ff0000);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: rainbow-text 2s linear infinite;
+}
+.gradient-bg {
+  /* background: linear-gradient(90deg, #5345E6, #8F34E9); */
+  background: linear-gradient(90deg, 
+        #ff0000, #ff7f00, #ffff00, #00ff00, 
+        #0000ff, #4b0082, #9400d3, #ff0000);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: rainbow-text 2s linear infinite;
+}
+
+
+@keyframes rainbow-text {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
   }
 }
 .slideshowSlider{
@@ -352,11 +485,72 @@ tr:not(:has(th)):hover {
 .react-datepicker-wrapper{
   width: 100% !important
 }
-.number_card div{
+/* .number_card div{
   border: 1px solid black;
-}
+} */
 /* .react-datepicker__day--disabled {
   color: #bdbdbd !important; 
   background-color: #e9e9e9 !important; 
 } */
+ .herobg{
+background: linear-gradient(
+ 90deg,
+  #B253E9 0%,
+  #E34AA5 40%,
+  #F8ECFF 40%,
+  #F8ECFF 60%,
+  #5345E6 60%,
+  #8F34E9 100%
+);
+ opacity: 0.5;
+  filter: blur(124px);
+  /* backdrop-filter: blur(8 px); */
 
+}
+.background-gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #5345E6, #8F34E9);
+  opacity: 0.5;
+  filter: blur(80px);
+  z-index: -1; /* behind content */
+}
+.xxsss{
+  background: black;
+
+}
+
+
+.step-card:nth-of-type(1) .card, .p1{
+  background: linear-gradient(90deg, #5345E6 0%, #8F34E9 100%);
+}
+.step-card:nth-of-type(2) .card, .p2{
+  background: linear-gradient(90deg, #B253E9 0%, #E34AA5 100%);
+}
+
+.step-card:nth-of-type(3) .card, .p3{
+  background: linear-gradient(90deg, #ED478C 0%, #EE444D 100%);
+}
+
+.gradient-p{
+/* background: linear-gradient(90deg, #ff6b6b, #5f27cd, #1dd1a1); */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.grid-2-no-row-height {
+  column-count: 2;
+  column-gap: 16px;
+}
+
+.grid-2-no-row-height .griditem {
+  break-inside: avoid;
+  margin-bottom: 16px;
+}
+
+.bg-g{
+  background-color: rgba(249, 250, 251, 0.418);
+}
