finished visual endpoints, filter endpoints,

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -293,6 +293,10 @@ input::-webkit-inner-spin-button {
  
 
 }
+table {
+  border-collapse: separate; 
+  border-spacing: 0 10px ;
+}
 .Toastify__toast--error {
   border: 1px solid #EB5757;
   background: #FAE1E2 !important;
@@ -332,6 +336,15 @@ tr:not(:has(th)):hover {
   outline: 1px solid slategrey;
 }
 
+/* .delete-tr td:not(:last-child) {
+  opacity: 0.5;
+  text-decoration: line-through;
+} */
+
+.delete-tr {
+  opacity: 0.5;
+  text-decoration: line-through;
+}
 
 @keyframes dropNav {
   from {
@@ -534,7 +547,17 @@ background: linear-gradient(
 .step-card:nth-of-type(3) .card, .p3{
   background: linear-gradient(90deg, #ED478C 0%, #EE444D 100%);
 }
+.grad-0 {
+  background: linear-gradient(90deg, #5345E6 0%, #8F34E9 100%);
+}
 
+.grad-1 {
+  background: linear-gradient(90deg, #B253E9 0%, #E34AA5 100%);
+}
+
+.grad-2 {
+  background: linear-gradient(90deg, #ED478C 0%, #EE444D 100%);
+}
 .gradient-p{
 /* background: linear-gradient(90deg, #ff6b6b, #5f27cd, #1dd1a1); */
   -webkit-background-clip: text;
@@ -551,6 +574,113 @@ background: linear-gradient(
   margin-bottom: 16px;
 }
 
+
 .bg-g{
   background-color: rgba(249, 250, 251, 0.418);
+}
+
+.hero h1, .hero .div{
+  opacity: 0;
+  transition: all 0.7s ease-in-out;
+  position: relative;
+  /* bottom: -100px; */
+}
+.hero-v h1, .hero-v .div{
+  opacity: 1;
+}
+
+.hero .x{
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+  position: relative;
+  bottom: -100px;
+}
+.hero-v .x{
+  opacity: 1;
+  bottom:0;
+}
+
+.hero .u{
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  position: relative;
+  bottom: -100px;
+}
+.hero-v .u{
+  opacity: 1;
+  bottom:0;
+}
+.hero .herobtn, .hero .herobtn3{
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  position: relative;
+  bottom: -100px;
+}
+.hero-v .herobtn, .hero-v .herobtn3{
+  opacity: 1;
+  bottom:0;
+}
+.numbers h2, .category h5{
+  opacity: 0;
+  transition: all 0.8s ease-in-out;
+  position: relative;
+  /* bottom: -100px; */
+}
+.numbers-v h2, .category-v h5{
+  opacity: 1;
+  /* bottom:0; */
+}
+
+.numbers .number-main{
+  opacity: 0;
+  transition: all 0.8s ease-in-out;
+  position: relative;
+  bottom: -100px;
+}
+.numbers-v .number-main {
+  opacity: 1;
+  bottom:0;
+}
+
+.numbers .number-main{
+  opacity: 0;
+  transition: all 0.8s ease-in-out;
+  position: relative;
+  bottom: -100px;
+}
+.numbers-v .number-main {
+  opacity: 1;
+  bottom:0;
+}
+.numbers .number-btn{
+  opacity: 0;
+  transition: all 1.5s ease-in-out;
+  position: relative;
+  bottom: -300px;
+}
+.numbers .number-btn{
+  opacity: 1;
+  bottom: 0;
+}
+
+.category .category-v-left, .slide-l>.le{
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  position: relative;
+  left: -300px;
+}
+.category-v .category-v-left, .slide-l-v>.le{
+  opacity: 1;
+  left: 0;
+}
+
+.category .category-v-right, .slide-l>.ri{
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  position: relative;
+  right: -300px;
+}
+.category-v .category-v-right, .slide-l-v>.ri{
+  opacity: 1;
+  right: 0;
 }
